edit Dashboard Logic